--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: bundle exec rails s -p 3000 -b '0.0.0.0'
+    command: dockerize -wait tcp://db:3306 -timeout 20s bundle exec rails s -p 3000 -b '0.0.0.0'
     tty: true
     stdin_open: true
     depends_on:
