--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,9 @@ services:
       MYSQL_ROOT_PASSWORD: password
       MYSQL_USER: ron
       MYSQL_PASSWORD: tenten2
+          #dbのデータを永続化しておく
+    volumes:
+      - mysql-data:/var/lib/mysql
   web:
     build:
       context: .
@@ -23,4 +26,23 @@ services:
     ports:
       - "3000:3000" # ホストからゲストへポートフォワード
     volumes:
-      - .:/ronstagram # ソースコード変更したらDocker側も即反映されるように
+      - .:/ronstagram:cached  # ソースコード変更したらDocker側も即反映されるように
+      - tmp-data:/ronstagram/tmp/sockets #ソケット通信用ファイルをnginxコンテナと共有
+      - public-data:/ronstagram/public #画像データとかをnginxと共有
+  nginx:
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
+    ports:
+      - 80:80
+    restart: always #明示的にstopさせるまでリスタートする。（失敗するたび遅延あり）
+    volumes:
+      - tmp-data:/ronstagram/tmp/sockets
+      - public-data:/ronstagram/public
+    depends_on:
+      - web
+
+volumes:
+  public-data:
+  tmp-data:
+  mysql-data:
